# colosus

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
mod/: README.md  lorem-ipsum.txt  main.py  stopwords.txt
web/: index.html  index.js  web.js
web/engine/: cloud
